# cpp3d-codes

./: README.md
cgal-samples/: CMakeLists.txt  conanfile.txt  readme.md
cgal-samples/simple/: CMakeLists.txt  conanfile.txt  readme.md
cgal-samples/simple/src/: A-HelloCGAL.cpp
cgal-samples/src/official/: CMakeLists.txt
cgal-samples/src/official/Subdivision_method_3/: CatmullClark_subdivision.cpp  DooSabin_subdivision.cpp  Loop_subdivision.cpp  Sqrt3_subdivision.cpp
cgal-samples/src/simple/: A-HelloCGAL.cpp  CMakeLists.txt
games101/: readme.md
games101/Homework1/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.hpp
games101/Homework2/: CMakeLists.txt  README.md  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
games101/Homework3/: CMakeLists.txt  Shader.hpp  Texture.hpp  Triangle.hpp  conanfile.txt  main.cpp  rasterizer.cpp  rasterizer.hpp  readme.md
games101/Homework4/: CMakeLists.txt  conanfile.txt  main.cpp  readme.md
games101/Homework5/: CMakeLists.txt  Light.h  Object.h  Renderer.cpp  Renderer.h  Scene.h  Sphere.h  Triangle.h  Vector.h  global.h  main.cpp
geodoer/: Findgeodoer.cmake
geodoer/geodoer/data/: GBoundingBox.hpp  GPoint.hpp  GPolygon.hpp  GPolyline.hpp  GTriangle.hpp  GTriangleMesh.hpp
geodoer/geodoer/io/: ObjIOPlugin.hpp
libigl-samples/: CMakeLists.txt  build.bat  readme.md
libigl-samples/cmake/: libigl.cmake
libigl-samples/simple/: CMakeLists.txt  conanbuild.bat  conanfile.txt
libigl-samples/simple/src/: A-HiIgl.cpp
libigl-samples/src/simple/: CMakeLists.txt
libigl-samples/src/simple/cgal/: Subdivision_method.cpp
libigl-samples/src/simple/ui/: 106ViewerMenu.cpp  107MultipleMeshes.cpp
occt-samples/: CMakeLists.txt  conanfile.txt  readme.md
occt-samples/include/algo/: GeomAlgo.hpp  TopoDSAlgo.hpp
occt-samples/include/data/: UPoint.hpp  UPolyline.hpp  UTriangle.hpp  UTriangleMesh.hpp
occt-samples/include/io/: TopoDSIO.hpp  TopoDSShapeIO.hpp  UTriangleMeshIO.hpp
occt-samples/simple/: CMakeLists.txt  conanbuild.bat  conanfile.txt  readme.md
occt-samples/simple/src/: A-Create_TopoDS_Shape.cpp  A-TopoDS_Shape.cpp
occt-samples/src/simple/: A-TopoDS_Shape.cpp  B-Point.cpp  C-BezierSurface.cpp  CMakeLists.txt  D-Sweep.cpp  E-ModifyShape.cpp  Z-RiverModeling.cpp
vcglib-samples/isosurface/: CMakeLists.txt  conanbuild.bat  conanfile.txt  readme.md
vcglib-samples/isosurface/src/: main.cpp
vcglib-samples/isosurface/src/meshlab/: base_types.h  cmesh.cpp  cmesh.h
